--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mhmdhammoud/react-boiler-plate",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "private": false,
   "bin": {
     "@mhmdhammoud/react-boiler-plate": "./bin/generate.js"
@@ -10,13 +10,6 @@
     "url": "https://github.com/Mhmdhammoud/react-boiler-plate.git"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@sentry/cli": "^1.67.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -28,8 +21,7 @@
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^1.0.1"
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
