--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "type": "git",
     "url": "https://github.com/Mhmdhammoud/react-boiler-plate.git"
   },
+  "homepage": "https://github.com/Mhmdhammoud/react-boiler-plate",
+  "license": "MIT",
   "dependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
